Se realiza la correccion del core para que el footer quede en la parte de abajo. udistrital/Cumplidos_y_certificaciones_documentacion#69

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -47,7 +47,8 @@
   <script type="systemjs-importmap">
     {
       "imports": {
-        "@udistrital/root-config": "//localhost:4200/udistrital-root-config.js"
+        "@udistrital/root-config": "//localhost:4200/udistrital-root-config.js",
+        "@udistrital/core-mf": "//localhost:4201/main.js"
       }
     }
   </script>
