feat: Corregir error al cargar archivos JSON / Título de página
- Se cambia el título de la página.
- Se crea proxy para la carga de archivos JSON.
udistrital/Cumplidos_y_certificaciones_documentacion#215

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Root Config</title>
+  <title>Cumplidos Proveedores</title>
+  <base href="/">
 
   <!--
     Remove this if you only support browsers that support async/await.
@@ -17,7 +18,7 @@
     This CSP allows any SSL-enabled host and for arbitrary eval(), but you should limit these directives further to increase your app's security.
     Learn more about CSP policies at https://content-security-policy.com/#directive
   -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* ws://localhost:*; style-src 'unsafe-inline' https:; object-src 'none';">
+  <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' https: data: blob: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* ws://localhost:*; style-src 'unsafe-inline' https:; object-src 'none';"> -->
   <meta name="importmap-type" content="systemjs-importmap" />
   <!-- If you wish to turn off import-map-overrides for specific environments (prod), uncomment the line below -->
   <!-- More info at https://github.com/joeldenning/import-map-overrides/blob/master/docs/configuration.md#domain-list -->
@@ -48,7 +49,7 @@
     {
       "imports": {
         "@udistrital/root-config": "//localhost:4200/udistrital-root-config.js",
-        "@udistrital/core-mf": "//localhost:4201/main.js",
+        "@udistrital/core-mf": "https://pruebascoreclientes.portaloas.udistrital.edu.co/main.js",
         "@udistrital/proveedores1": "//localhost:4202/main.js"
       }
     }
